History
=======

Version 0.8.16 - unreleased
---------------------------

- Fixed translations that were causing compile errors on Zope startup,
  resulting in old translations showing up for a language (taken from
  the outdated .mo file), or no translations at all.
  [maurits]

- Updated Dutch translations.
  [maurits]

Version 0.8.15 - 2010-02-01
---------------------------

- Added a development buildout and automated test runner setup to the package.
  [hannosch]

- Fixed ConfigurationError: ('Missing parameter:', 'description') on Plone 3
  with the last upgrade steps.
  [toutpt]

Version 0.8.14 - 2010-01-28
---------------------------

- Added missing upgrade steps for all recent versions. This makes the package
  comply with the upgrade logic of the Plone add-ons control panel.
  [hannosch]

- Follow best practice and decouple the profile metadata from the software
  version in setup.py.
  [hannosch]

- Added a z3c.autoinclude entry point to mark this as a Plone add-on.
  [hannosch]

- Added our own overrides.zcml to load the one from plone.z3cform. You cannot
  load overrides in the configure stage.
  [hannosch]

- Add log on ATTopic Patch.
  [toutpt]

- Update French translations.
  [toutpt]

- Fix i18n pot file by escape quotes.
  [toutpt]

- Extended the HTML composer so that you can select which composer template
  to use. You register new composer templates by instantiating a template
  somewhere in your code::

    >>> mytemplate = ViewPageTemplateFile('browser/composer-html.pt')

  and registering that in ZCML::

    <utility component=".module.mytemplate"
           name="My Custom Template"
           provides="collective.dancing.interfaces.IHTMLComposerTemplate" />

  [regebro]

Version 0.8.13 - 2009-10-19
---------------------------

- The attribute 'subscribeable' now defaults to False on newly created
  channels. This means newly created channels will not show up on my-subscriptions